<resources>
    <string name="app_name">Final</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_food">Food Analysis</string>
    <string name="menu_profile">Profile</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="Gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="heigtHint">Your height in cm</string>
    <string name="weightHint">Your weight in kg</string>

    <string name="keyPath">profilePath</string>
    <string name="keyName">profileName</string>
    <string name="keyAge">profileAge</string>
    <string name="keyHeight">profileHeight</string>
    <string name="keyWeight">profileWeight</string>
    <string name="keyGen">profileGender</string>
    <string name="keyAcc">already</string>
</resources>