<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/profile"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:text="@string/name"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:id="@+id/tvName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edittext"
        android:layout_weight=".75"
        android:layout_below="@id/tvName"
        android:layout_marginTop="10dp"
        android:id="@+id/editName"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/editName"
        android:text="@string/age"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:id="@+id/tvAge"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edittext"
        android:layout_weight=".75"
        android:layout_below="@id/tvAge"
        android:layout_marginTop="10dp"
        android:id="@+id/editAge"
        android:inputType="numberSigned"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/editAge"
        android:text="@string/Gender"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:id="@+id/tvGender"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/tvGender"
        android:id="@+id/radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/radio_male"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/radio_female"
            />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/radio_group"
        android:text="@string/height"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:id="@+id/tvHeight"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edittext"
        android:layout_weight=".75"
        android:layout_below="@id/tvHeight"
        android:layout_marginTop="10dp"
        android:id="@+id/editHeight"
        android:inputType="numberDecimal"
        android:hint="@string/heigtHint"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/editHeight"
        android:text="@string/weight"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:id="@+id/tvWeight"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edittext"
        android:layout_weight=".75"
        android:layout_below="@id/tvWeight"
        android:layout_marginTop="10dp"
        android:id="@+id/editWeight"
        android:inputType="numberDecimal"
        android:hint="@string/weightHint"
        android:padding="5dp"
        />
    <ImageButton
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_below="@id/editWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/next"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:id="@+id/imageNext"
        />
</RelativeLayout>